Force to use https where possible.

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                             <br>
                             <a href="pp/privacy-policy-xash3d.html">Privacy Policy</a>
                             <br>
-                            <a href="http://www.moddb.com/engines/xash3d-fwgs-engine">
-                            <img src="http://button.moddb.com/rating/medium/engines/972.png" alt="Xash3D FWGS Engine">
+                            <a href="https://www.moddb.com/engines/xash3d-fwgs-engine">
+                            <img src="https://button.moddb.com/rating/medium/engines/972.png" alt="Xash3D FWGS Engine">
                             </a>
                             <a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.hl">
                             <img alt="Android app on Google Play" src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png" height="50">
