Return donation panel.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><a title="Gallery" href="#last-works">Gallery</a></li>
                             <li><a title="Our Project" href="#services">Our Project</a></li>
                             <li><a title="Contact Us" href="#contacts">Contact Us</a></li>
-                            <!--<li><a title="Appointment" href="#support"><i class="fa fa-credit-card"></i>Support us</a></li>-->
+                            <li><a title="Appointment" href="#support"><i class="fa fa-credit-card"></i>Support us</a></li>
                         </ul>
                     </nav>
 
@@ -625,7 +625,7 @@
 
         <!-- ============ Journal - START ============ -->
 
-        <!--<div id="support" class="section dark">
+        <div id="support" class="section dark">
 
             <div class="section-title">
                 <h2><i class="fa fa-credit-card"></i>Support us</h2>
@@ -635,14 +635,15 @@
 
                 <div class="row">
 
-                    <div class="text-center">
-                        <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410012513146482&amp;quickpay=shop&amp;payment-type-choice=on&amp;mobile-payment-type-choice=on&amp;writer=buyer&amp;targets-hint=SDLash3D+Team+Donation&amp;default-sum=200&amp;button-text=03&amp;successURL=http%3A%2F%2Fsdlash3d.github.io%2Fthank-you.html" width="450" height="211"></iframe>
+                    <div class="text-center" style="background:white">
+                        <!--<iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410012513146482&amp;quickpay=shop&amp;payment-type-choice=on&amp;mobile-payment-type-choice=on&amp;writer=buyer&amp;targets-hint=SDLash3D+Team+Donation&amp;default-sum=200&amp;button-text=03&amp;successURL=http%3A%2F%2Fsdlash3d.github.io%2Fthank-you.html" width="450" height="211"></iframe>-->
+			<zero-md src="https://raw.githubusercontent.com/FWGS/xash3d-fwgs/master/Documentation/donate.md"></zero-md>
                     </div>
                 </div>
 
             </div>
 
-        </div>-->
+        </div>
 
         <!-- ============ Journal - END ============ -->
 
@@ -695,7 +696,7 @@
     <script src="js/common.js"></script>
     <script src="js/config.js"></script>
     <script src="js/main.js"></script>
-
+    <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
     <script>
         $('#media-container').backstretch('img/bg.jpg');
     </script>
