--- a/tools/base.html
+++ b/tools/base.html
@@ -133,9 +133,16 @@
                         <div class="contact-item">
                             <span>Follow us on:</span>
                             <ul class="social-links">
-                                <li><a title="YouTube" href="https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>
-                                <li><a title="ModDB" href="http://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
-                                <li><a title="VK" href="https://vk.com/xashdroid"><i class="fa fa-vk"></i></a></li>
+                                <!--<li><a title="YouTube" href="https://www.youtube.com/channel/UCDSnCNfTfqtbe9NnEax6ZHQ"><i class="fa fa-youtube"></i></a></li>-->
+                                <li><a title="Mastodon" href="https://masturbated.one"><i class="fa fa-mastodon"></i></a></li>
+                                <li><a title="Akkoma" href="https://suya.place"><i class="fa fa-pleroma"></i></a></li>
+                                <li><a title="ModDB" href="https://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
+                                <li><a title="VK" href="https://vk.com/fwgs.testing"><i class="fa fa-vk"></i></a></li>
+                                <li><a title="GitHub" href="https://github.com/FWGS"><i class="fa fa-github"></i></a></li>
+                                <li><a title="Gitea" href="https://git.mentality.rip/FWGS"><i class="fa fa-gitea"></i></a></li>
+                                <li><a title="SourceHut-Git" href="https://git.sr.ht/~a1batross"><i class="fa fa-git"></i></a></li>
+                                <li><a title="SourceHut-Issuetracker" href="https://todo.sr.ht/~a1batross"><i class="fa fa-bug"></i></a></li>
+                                <li><a title="SourceHut-Mailinglist" href="https://lists.sr.ht/~a1batross"><i class="fa fa-email-bulk"></i></a></li>
                             </ul>
                         </div>
 
