Add link to telegram.

--- a/index.html
+++ b/index.html
@@ -625,6 +625,10 @@
 
             <div class="content container m-t-0">
                 <p class="text-center">
+                        <a href="https://t.me/flyingwithgauss" target="_blank" style="background: #0088cc; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                        <img decoding="async" src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 20px; height: auto;">Join our telegram group!</a>
+                        <br>
+                        <br>
 			<a href="http://fwgsdiscord.mentality.rip">Join our Discord guild!</a>
 			<br>
 			<iframe src="https://discordapp.com/widget?id=355697768582610945&theme=dark" width="280" height="500" allowtransparency="true" frameborder="0"></iframe>
@@ -680,6 +684,7 @@
                                 <li><a title="Akkoma" href="https://suya.place"><i class="fa fa-pleroma"></i></a></li>
                                 <li><a title="ModDB" href="https://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
                                 <li><a title="VK" href="https://vk.com/fwgs.testing"><i class="fa fa-vk"></i></a></li>
+                                <li><a title="Telegram" href="https://t.me/flyingwithgauss"><i class="fa fa-telegram"></i></a></li>
                                 <li><a title="GitHub" href="https://github.com/FWGS"><i class="fa fa-github"></i></a></li>
                                 <li><a title="Gitea" href="https://git.mentality.rip/FWGS"><i class="fa fa-gitea"></i></a></li>
                                 <li><a title="SourceHut-Git" href="https://git.sr.ht/~a1batross"><i class="fa fa-git"></i></a></li>
