--- a/tools/base.html
+++ b/tools/base.html
@@ -138,6 +138,7 @@
                                 <li><a title="Akkoma" href="https://suya.place"><i class="fa fa-pleroma"></i></a></li>
                                 <li><a title="ModDB" href="https://www.moddb.com/company/fwg"><i class="fa fa-optin-monster"></i></a></li>
                                 <li><a title="VK" href="https://vk.com/fwgs.testing"><i class="fa fa-vk"></i></a></li>
+                                <li><a title="Telegram" href="https://t.me/flyingwithgauss"><i class="fa fa-telegram"></i></a></li>
                                 <li><a title="GitHub" href="https://github.com/FWGS"><i class="fa fa-github"></i></a></li>
                                 <li><a title="Gitea" href="https://git.mentality.rip/FWGS"><i class="fa fa-gitea"></i></a></li>
                                 <li><a title="SourceHut-Git" href="https://git.sr.ht/~a1batross"><i class="fa fa-git"></i></a></li>
