Add links to github repos.

--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@
                             <!-- <br>
                             <a href="pp/privacy-policy-xash3d.html">Privacy Policy</a> -->
                             <br>
+                            <span style="font-size: 50px;"><a class="fa fa-github" href="https://github.com/FWGS/xash3d-fwgs"></a></span>
+                            <br>
                             <a href="https://www.moddb.com/engines/xash3d-fwgs-engine">
                             <img src="https://button.moddb.com/rating/medium/engines/972.png" alt="Xash3D FWGS Engine">
                             </a>
@@ -290,6 +292,8 @@
                             <p>Counter-Strike 1.6 Android port using Xash3D FWGS engine, rewritten CS1.6 client library and ReGameDLL_CS
                             <!-- <br>
                             <a href="pp/privacy-policy-cs16client.html">Privacy Policy</a> -->
+                            <br>
+                            <span style="font-size: 50px;"><a class="fa fa-github" href="https://github.com/Velaron/cs16-client"></a></span>
                             </p>
                         </div>
                         <div class="col-md-4">
