Update cs16-client page.

--- a/cs16client.html
+++ b/cs16client.html
@@ -74,14 +74,7 @@
 
                         <p>CS16Client is pure Counter-Strike 1.6 port to Android OS which uses Xash3D FWGS engine and ReGameDLL_CS.</p>
 
-                        <p>You can download latest version on Google Play:
-							<br>
-							<a href="https://play.google.com/store/apps/details?id=in.celest.xash3d.cs16client">
-								<img alt="Android app on Google Play" src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png" height="50">
-							</a>
-						</p>
-						
-						<p><a href="pp/privacy-policy-cs16client.html">Privacy Policy</a></p>
+						<!-- <p><a href="pp/privacy-policy-cs16client.html">Privacy Policy</a></p> -->
 
                     </div>
 
