Update Xash3d FWGS page.

--- a/xash3d.html
+++ b/xash3d.html
@@ -75,7 +75,7 @@
 
                         <p>Xash3D FWGS is a fork of Xash3D Engine, which aims on crossplatform, perfect online game and compability with original Xash3D and Gold Source.</p>
                         
-                        <p><a href="pp/privacy-policy-xash3d.html">Privacy Policy</a></p>
+                        <!-- <p><a href="pp/privacy-policy-xash3d.html">Privacy Policy</a></p> -->
 
                     </div>
 
