--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
             <div class="content container m-t-0">
                 <p class="text-center">
                         <a href="https://t.me/flyingwithgauss" target="_blank" style="background: #0088cc; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                        <img decoding="async" src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 20px; height: auto;">Join our telegram group!</a>
+                        <i class="fa fa-telegram"></i> Join our telegram group!</a>
                         <br>
                         <br>
 			<a href="http://fwgsdiscord.mentality.rip">Join our Discord guild!</a>
