Don't use span tag.

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <!-- <br>
                             <a href="pp/privacy-policy-xash3d.html">Privacy Policy</a> -->
                             <br>
-                            <span style="font-size: 50px;"><a class="fa fa-github" href="https://github.com/FWGS/xash3d-fwgs"></a></span>
+                            <a class="fa fa-github" style="font-size: 50px;" href="https://github.com/FWGS/xash3d-fwgs"></a>
                             <br>
                             <a href="https://www.moddb.com/engines/xash3d-fwgs-engine">
                             <img src="https://button.moddb.com/rating/medium/engines/972.png" alt="Xash3D FWGS Engine">
@@ -293,7 +293,7 @@
                             <!-- <br>
                             <a href="pp/privacy-policy-cs16client.html">Privacy Policy</a> -->
                             <br>
-                            <span style="font-size: 50px;"><a class="fa fa-github" href="https://github.com/Velaron/cs16-client"></a></span>
+                            <a class="fa fa-github" style="font-size: 50px;" href="https://github.com/Velaron/cs16-client"></a>
                             </p>
                         </div>
                         <div class="col-md-4">
