Change telegram button color.

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
 
             <div class="content container m-t-0">
                 <p class="text-center">
-                        <a href="https://t.me/flyingwithgauss" target="_blank" style="background: #0088cc; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                        <a href="https://t.me/flyingwithgauss" target="_blank" style="background: #259bd7; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
                         <i class="fa fa-telegram"></i> Join our telegram group!</a>
                         <br>
 			<a href="https://fwgsdiscord.mentality.rip" target="_blank" style="background: #5865f2; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
