Shorten Discord link
discord.gg is an official url btw

--- a/discord/index.html
+++ b/discord/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 	<head>
-		<meta http-equiv="refresh" content="0; url=https://discord.com/invite/G8eGs7DvYn" />
+		<meta http-equiv="refresh" content="0; url=https://discord.gg/G8eGs7DvYn" />
 	</head>
 	<body>
-		<a href="https://discord.com/invite/G8eGs7DvYn">Redirect</a>
+		<a href="https://discord.gg/G8eGs7DvYn">Redirect</a>
 	</body>
 </html>
