Remove placeholder slop

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                             </div>
                             <div class="info-work testimonial">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    The main menu of <a style="font-weight: bold;" href="https://github.com/Velaron/cs16-client">CS16Client</a>, running on an Android phone.
                                 </p>
-                                <div class="name">Testimonial A</div>
+                                <div class="name">CS16Client Screenshot</div>
                             </div>
 
                         </div>
@@ -110,9 +110,9 @@
                             </div>
                             <div class="info-work testimonial">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    The Counter-Strike team selection menu, running on Android.
                                 </p>
-                                <div class="name">Testimonial A</div>
+                                <div class="name">CS16Client in-game Screenshot</div>
                             </div>
 
                         </div>
@@ -128,9 +128,9 @@
                             </div>
                             <div class="info-work">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    The Counter-Strike class selection menu, running on Android.
                                 </p>
-                                <div class="name">John Doe <small>, the Artist</small></div>
+                                <div class="name">CS16Client in-game Screenshot</div>
                             </div>
 
                         </div>
@@ -146,9 +146,9 @@
                             </div>
                             <div class="info-work testimonial">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    In-game screenshot of <a style="font-weight: bold;" href="https://github.com/Velaron/cs16-client">CS16Client</a>, playing on the T team.
                                 </p>
-                                <div class="name">Testimonial B</div>
+                                <div class="name">CS16Client in-game Screenshot</div>
                             </div>
 
                         </div>
@@ -164,9 +164,9 @@
                             </div>
                             <div class="info-work testimonial">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    A CT about to get sniped in Dust II.
                                 </p>
-                                <div class="name">Testimonial C</div>
+                                <div class="name">CS16Client in-game Screenshot</div>
                             </div>
 
                         </div>
@@ -179,7 +179,12 @@
                                     <a class="zoom" href="img/6.png"></a>
                                 </div>
                             </div>
-
+                           <div class="info-work testimonial">
+                                <p>
+                                    Half-Life main menu, running on Android.
+                                </p>
+                                <div class="name">Half-Life Screenshot</div>
+                            </div>
                         </div>
 
                         <div class="work col-md-3 col-sm-6">
@@ -193,9 +198,9 @@
                             </div>
                             <div class="info-work testimonial">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    A screenshot of the Half-Life singleplayer campaign, the player being assisted by Barney. Running on Android.
                                 </p>
-                                <div class="name">Testimonial D</div>
+                                <div class="name">Half-Life in-game Screenshot</div>
                             </div>
 
                         </div>
@@ -211,9 +216,9 @@
                             </div>
                             <div class="info-work testimonial">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    Counter-Strike Dust map running on Linux 32-bit CS16Client.
                                 </p>
-                                <div class="name">Testimonial E</div>
+                                <div class="name">CS16Client in-game Screenshot</div>
                             </div>
 
                         </div>
@@ -229,9 +234,9 @@
                             </div>
                             <div class="info-work">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    Screenshot of Quake running on Linux 32-bit Xash3D FWGS engine.
                                 </p>
-                                <div class="name">Sara Doe <small>, the Artist</small></div>
+                                <div class="name">Quake in-game Screenshot</div>
                             </div>
 
                         </div>
@@ -247,9 +252,9 @@
                             </div>
                             <div class="info-work">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae atque earum incidunt soluta, animi, officiis.
+                                    Screenshot of Half-Life: Opposing Force running on Linux 32-bit Xash3D FWGS engine.
                                 </p>
-                                <div class="name">Tom Doe <small>, the Artist</small></div>
+                                <div class="name">Opposing Force in-game Screenshot</div>
                             </div>
 
                         </div>
