--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div id="services" class="section dark">
 
                 <div class="section-title">
-                    <h2>Our project</h2>
+                    <h2>Our projects</h2>
                 </div>
 
                 <div class="content container">
@@ -281,7 +281,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="xash3d.html">Xash3D FWGS</a></h3>
-                            <p>Xash3D engine fork with many new features: high portability, advanced multiplayer, touchscreen & gamepad support and much more.
+                            <p>A Xash3D engine fork with many new features: high portability, advanced multiplayer, touchscreen & gamepad support and much more.
                             <!-- <br>
                             <a href="pp/privacy-policy-xash3d.html">Privacy Policy</a> -->
                             <br>
@@ -294,7 +294,7 @@
                         </div>
                         <div class="col-md-4">
                             <h3><a href="cs16client.html">CS16Client</a></h3>
-                            <p>Counter-Strike 1.6 Android port using Xash3D FWGS engine, rewritten CS1.6 client library and ReGameDLL_CS
+                            <p>A Counter-Strike 1.6 Android port using Xash3D FWGS engine, rewritten CS1.6 client library and ReGameDLL_CS
                             <!-- <br>
                             <a href="pp/privacy-policy-cs16client.html">Privacy Policy</a> -->
                             <br>
@@ -303,7 +303,7 @@
                         </div>
                         <div class="col-md-4">
                             <h3><a href="https://github.com/FWGS/mainui_cpp">MainUI C++</a></h3>
-                            <p>GUI library for Xash3D, written in C++. Includes window system, powerful font rendering and dynamic menus. Supports both original Xash3D and Xash3D FWGS.</p>
+                            <p>A GUI library for Xash3D, written in C++. Includes window system, powerful font rendering and dynamic menus. Supports both original Xash3D and Xash3D FWGS.</p>
                         </div>
                     </div>
 
@@ -316,7 +316,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/BS-android">BSLauncher</a></h3>
-                            <p>BSLauncher is a standalone game which uses Xash3D FWGS engine and compatible with Half-Life: Blue Shift.
+                            <p>BSLauncher is a standalone game which uses the Xash3D FWGS engine and is compatible with Half-Life: Blue Shift.
                             <!-- <br>
                             <a href="pp/privacy-policy-bshift.html">Privacy Policy</a> -->
                             <br>
@@ -328,7 +328,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/BlackOps-android">Black OPS</a></h3>
-                            <p>Android port of famous Black OPS mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Black OPS mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-blackops.html">Privacy Policy</a> -->
                             <br>
@@ -344,7 +344,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/XenWarrior-android">Xen-Warrior</a></h3>
-                            <p>Android port of Half-Life: Xen-Warrior mod on Xash3D FWGS engine.
+                            <p>Android port of the Half-Life: Xen-Warrior mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-xenwar.html">Privacy Policy</a> -->
                             <br>
@@ -356,7 +356,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/TimesOfTroubles-android">Times of Troubles</a></h3>
-                            <p>Android port of Half-Life: Times of Troubles mod on Xash3D FWGS engine.
+                            <p>Android port of the Half-Life: Times of Troubles mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-tot.html">Privacy Policy</a> -->
                             <br>
@@ -368,7 +368,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/EscapeFromTheDarkness-android">Escape from the Darkness</a></h3>
-                            <p>Android port of Half-Life: Escape from the Darkness mod on Xash3D FWGS engine.
+                            <p>Android port of the Half-Life: Escape from the Darkness mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-eftd.html">Privacy Policy</a> -->
                             <br>
@@ -384,7 +384,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/DMC-android">QCLauncher</a></h3>
-                            <p>QCLauncher is a standalone game which uses Xash3D FWGS engine and compatible with Deathmatch Classic.
+                            <p>QCLauncher is a standalone game which uses the Xash3D FWGS engine and is compatible with Deathmatch Classic.
                             <!-- <br>
                             <a href="pp/privacy-policy-dmc.html">Privacy Policy</a> -->
                             <br>
@@ -396,7 +396,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/Parabot">Parabot CB</a></h3>
-                            <p>Android port of multiplayer bots for Half-Life: Deathmatch on Xash3D FWGS engine.
+                            <p>Multiplayer bots for Half-Life: Deathmatch ported to Android on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-parabot.html">Privacy Policy</a> -->
                             <br>
@@ -408,7 +408,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/Bubblemod-android">Bubblemod</a></h3>
-                            <p>Android port of famous Half-Life: Deathmatch mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Half-Life: Deathmatch mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-bubblemod.html">Privacy Policy</a> -->
                             <br>
@@ -424,7 +424,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/Poke646-android">Poke646</a></h3>
-                            <p>Android port of famous Poke646 mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Poke646 mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-poke646.html">Privacy Policy</a> -->
                             <br>
@@ -436,7 +436,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/Poke646_Vendetta-android">Poke646: Vendetta</a></h3>
-                            <p>Android port of famous Poke646: Vendetta mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Poke646: Vendetta mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-vendetta.html">Privacy Policy</a> -->
                             <br>
@@ -464,7 +464,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/AoMDC-android">Afraid of Monsters: Director's Cut</a></h3>
-                            <p>Android port of famous Afraid of Monsters: Director's Cut mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Afraid of Monsters: Director's Cut mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-aomdc.html">Privacy Policy</a> -->
                             <br>
@@ -516,7 +516,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/ResidualPoint-android">ResidualLauncher</a></h3>
-                            <p>ResidualLauncher is a standalone game which uses Xash3D FWGS engine and compatible with Half-Life: Residual Point and Half-Life: Residual Life.
+                            <p>ResidualLauncher is a standalone game which uses the Xash3D FWGS engine and is compatible with Half-Life: Residual Point and Half-Life: Residual Life.
                             <!-- <br>
                             <a href="pp/privacy-policy-rpoint.html">Privacy Policy</a> -->
                             <br>
@@ -528,7 +528,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/HalfLife_Visitors-android">Visitors</a></h3>
-                            <p>Android port of famous Half-Life: Visitors mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Half-Life: Visitors mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-visitors.html">Privacy Policy</a> -->
                             <br>
@@ -544,7 +544,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/AdrenalineGamer-android">Adrenaline Gamer</a></h3>
-                            <p>Android port of famous Adrenaline Gamer 6.6 mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Adrenaline Gamer mod on the Xash3D FWGS engine. (Version 6.6)
                             <!-- <br>
                             <a href="pp/privacy-policy-ag.html">Privacy Policy</a> -->
                             <br>
@@ -556,7 +556,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/TheGate-android">The Gate</a></h3>
-                            <p>Android port of famous Half-Life: The Gate mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Half-Life: The Gate mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-thegate.html">Privacy Policy</a> -->
                             <br>
@@ -568,7 +568,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/SOHL-1.2-android">SOHL12Launcher</a></h3>
-                            <p>SOHL12Launcher is a standalone game which uses Xash3D FWGS engine and compatible with Spirit of Half-Life 1.2 toolkit.
+                            <p>SOHL12Launcher is a standalone game which uses the Xash3D FWGS engine and is compatible with the Spirit of Half-Life 1.2 toolkit.
                             <!-- <br>
                             <a href="pp/privacy-policy-sohl12.html">Privacy Policy</a> -->
                             <br>
@@ -584,7 +584,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/NightAtTheOffice-android">Night at the Office</a></h3>
-                            <p>Android port of famous Night at the Office mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Night at the Office mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-noffice.html">Privacy Policy</a> -->
                             <br>
@@ -596,7 +596,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/HalfScrewed-android">Half-Screwed Death and Rebirth</a></h3>
-                            <p>Android port of famous Half-Screwed Death and Rebirth mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Half-Screwed Death and Rebirth mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-hscrewed.html">Privacy Policy</a> -->
                             <br>
@@ -608,7 +608,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/Rebellion-android">Rebellion</a></h3>
-                            <p>Android port of famous Half-Life: Rebellion mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Half-Life: Rebellion mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-rebellion.html">Privacy Policy</a> -->
                             <br>
@@ -624,7 +624,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/AzureSheep-android">Azure Sheep</a></h3>
-                            <p>Android port of famous Azure Sheep mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Azure Sheep mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-asheep.html">Privacy Policy</a> -->
                             <br>
@@ -636,7 +636,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/HalfLife_Echoes-android">Echoes</a></h3>
-                            <p>Android port of famous Half-Life: Echoes mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Half-Life: Echoes mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-echoes.html">Privacy Policy</a> -->
                             <br>
@@ -648,7 +648,7 @@
 
                         <div class="col-md-4">
                             <h3><a href="https://github.com/nekonomicon/HLTopDown-android">TopDown</a></h3>
-                            <p>Android port of famous Half-Life: Top-Down mod on Xash3D FWGS engine.
+                            <p>Android port of the famous Half-Life: Top-Down mod on the Xash3D FWGS engine.
                             <!-- <br>
                             <a href="pp/privacy-policy-topdown.html">Privacy Policy</a> -->
                             <br>
