--- a/index.html
+++ b/index.html
@@ -679,13 +679,19 @@
 
             <div class="content container m-t-0">
                 <p class="text-center">
+                        <span style="display:inline-block;padding:10px 0px;">
                         <a href="https://t.me/flyingwithgauss" target="_blank" style="background: #259bd7; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
                         <i class="fa fa-telegram"></i> Join our telegram group!</a>
+                        </span>
                         <br>
-			<a href="https://fwgsdiscord.mentality.rip" target="_blank" style="background: #5865f2; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                        <span style="display:inline-block;padding:10px 0px;">
+			<a href="./discord" target="_blank" style="background: #5865f2; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
                         <i class="fa fa-discord"></i> Join our Discord guild!</a>
-			<br>
+			</span>
+                        <br>
+                        <span style="display:inline-block;padding:10px 0px;">
 			<iframe src="https://discordapp.com/widget?id=355697768582610945&theme=dark" width="280" height="500" allowtransparency="true" frameborder="0"></iframe>
+                        </span>
                 </p>
             </div>
 
