Add shadow to Telegram and Discord button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body class="one-page">
@@ -680,12 +681,12 @@
             <div class="content container m-t-0">
                 <p class="text-center">
                         <span style="display:inline-block;padding:10px 0px;">
-                        <a href="https://t.me/flyingwithgauss" target="_blank" style="background: #259bd7; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                        <a href="https://t.me/flyingwithgauss" target="_blank" class="shadow" style="background: #259bd7; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
                         <i class="fa fa-telegram"></i> Join our telegram group!</a>
                         </span>
                         <br>
                         <span style="display:inline-block;padding:10px 0px;">
-			<a href="./discord" target="_blank" style="background: #5865f2; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+			<a href="./discord" target="_blank" class="shadow" style="background: #5865f2; color: #ffffff; padding: 12px 24px; font-size: 16px; border-radius: 8px; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
                         <i class="fa fa-discord"></i> Join our Discord guild!</a>
 			</span>
                         <br>
