--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>FWGS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="logo.png">
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
